crates/compiler/parse/tests/snapshots/fail/empty_or_pattern.expr.roc
when Just 4 is
    Just 4 | ->
        4

    _ ->
        2
